# haskell-webrtc-vad

./: .gitignore  LICENSE  webrtc-vad.cabal
src/: Test.hs
src/Sound/VAD/: WebRTC.hsc
src/cbits/webrtc/common_audio/signal_processing/: auto_corr_to_refl_coef.c  spl_init.c
src/cbits/webrtc/rtc_base/: checks.cc  checks.h  compile_assert_c.h  sanitizer.h  type_traits.h
src/cbits/webrtc/rtc_base/numerics/: safe_compare.h
src/cbits/webrtc/rtc_base/system/: arch.h  inline.h
src/cbits/webrtc/system_wrappers/include/: cpu_features_wrapper.h
